--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,8 @@ en:
       meme_toit_lead: "No matter what your looking for, WE got it."
       achat_en_kit: "Buy in packages. "
       achat_en_kit_checkmate: "Checkmate."
-      achat_en_kit_lead: "You will get discounts if you buy one of our two packages: Rookie or Pro."
+      achat_en_kit_lead: "You will get discounts if you buy one of our two packages : "
+      achat_en_kit_lead_ou: "or"
       # email_placeholder: "example@gmail.com"
       # email_submit_btn: "Averti moi !"
 
