--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -6,7 +6,7 @@ fr:
       lead: "Boutique en ligne pour équipement d'arbitre de hockey."
       span: "Inscrivez-vous et courez la chance de gagner une "
       span_strong: "nouvelle visière CCM straight !"
-      meilleur_prix: "Meilleur prix. "
+      meilleur_prix: "Bas prix. "
       blow_your_mind: "Quelques chose: Blow your mind."
       meilleur_prix_lead: "Nous allons offrir les meilleurs prix sur le marché."
       meme_toit: "Tout sous un même toit. "
@@ -14,6 +14,7 @@ fr:
       meme_toit_lead: "Peu importe ce que vous recherchez, on va l'avoir."
       achat_en_kit: "Achat en kit. "
       achat_en_kit_checkmate: "Échec et mat."
-      achat_en_kit_lead: "Vous allez pouvoir bénéficiez d'un rabais si vous achetez l'un de nos deux kit : Rookie ou Pro."
+      achat_en_kit_lead: "Vous allez pouvoir bénéficiez d'un rabais si vous achetez l'un de nos deux kit : "
+      achat_en_kit_lead_ou: "ou"
       # email_placeholder: "exemple@gmail.com"
       # email_submit_btn: "Averti moi !"
