Modify sentences in both languages un yml files

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -11,10 +11,10 @@ fr:
       meilleur_prix_lead: "Vous ne trouverez pas de meilleur prix ailleurs."
       meme_toit: "Tout sous un même toit. "
       meme_toit_regarde: "Vois par toi même."
-      meme_toit_lead: "Peu importe ce que vous recherchez, on va l'avoir."
+      meme_toit_lead: "Peu importe ce que vous recherchez, on l'a."
       achat_en_kit: "Achat en kit. "
       achat_en_kit_checkmate: "Échec et mat."
-      achat_en_kit_lead: "Vous allez pouvoir bénéficiez d'un rabais si vous achetez l'un de nos deux kit : "
+      achat_en_kit_lead: "Bénéficier d'un rabais en achetant l'un de nos deux kits : "
       achat_en_kit_lead_ou: "ou"
       # email_placeholder: "exemple@gmail.com"
       # email_submit_btn: "Averti moi !"
