brand new msgs with strong html and some new text in the javascript.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,8 +25,8 @@ en:
       bientot_en_ligne: "Coming soon"
       header_content: "We can make your life easier!"
       lead: "Online store for hockey referee equipment."
-      span: "Subscribe for a chance to win a "
-      span_strong: "brand new CCM visor straight !"
+      span: "Subscribe for a chance to win a brand new "
+      span_strong: "CCM visor straight !"
       meilleur_prix: "Best price. "
       blow_your_mind: "It'll blow your mind."
       meilleur_prix_lead: "You'll find the best prices on the market. That's it."
