--- a/config/locales/shared/en.yml
+++ b/config/locales/shared/en.yml
@@ -1,4 +1,5 @@
 en:
   shared:
     footer:
-      abonnez_vous: "Subscribe to the newsletter and run the chance to win a CCM visor !"
+      abonnez_vous: "Subscribe to the newsletter and have a chance to win a "
+      abonnez_vous_strong: "CCM visor straight !"
