--- a/config/locales/shared/fr.yml
+++ b/config/locales/shared/fr.yml
@@ -1,4 +1,6 @@
 fr:
   shared:
     footer:
-      abonnez_vous: "Abonnez-vous à l'infolettre et courez la chance de gagner une visière CCM straight !"
+      abonnez_vous: "Abonnez-vous à l'infolettre et courez la chance de gagner une "
+      abonnez_vous_strong: "nouvelle visière CCM straight !"
+
