--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,18 +1,32 @@
+---
 es:
+  active_admin:
+    dashboard: Dashboard
+    dashboard_welcome:
+      call_to_action: Call to action
+      welcome: Welcome
   pages:
     home:
-      bientot_en_ligne: "Coming soon"
-      header_content: "We can make your life easier!"
-      lead: "Online store for hockey referee equipment."
-      span: "Subscribe for a chance to win a brand new "
-      span_strong: "CCM visor straight !"
-      meilleur_prix: "Best price. "
-      blow_your_mind: "It'll blow your mind."
-      meilleur_prix_lead: "You'll find the best prices on the market. That's it."
-      meme_toit: "All in one place. "
-      meme_toit_regarde: "See for yourself."
-      meme_toit_lead: "No matter what you are looking for, WE got it."
-      achat_en_kit: "Buy in packages. "
-      achat_en_kit_checkmate: "Checkmate."
-      achat_en_kit_lead: "Get a discount if you buy one of our two packages : "
-      achat_en_kit_lead_ou: "or"
+      achat_en_kit: 'Buy in packages. '
+      achat_en_kit_checkmate: Checkmate.
+      achat_en_kit_lead: 'Get a discount if you buy one of our two packages : '
+      achat_en_kit_lead_ou: or
+      bientot_en_ligne: Coming soon
+      blow_your_mind: It'll blow your mind.
+      header_content: We can make your life easier!
+      lead: Online store for hockey referee equipment.
+      meilleur_prix: 'Best price. '
+      meilleur_prix_lead: You'll find the best prices on the market. That's it.
+      meme_toit: 'All in one place. '
+      meme_toit_lead: No matter what you are looking for, WE got it.
+      meme_toit_regarde: See for yourself.
+      span: 'Subscribe for a chance to win a brand new '
+      span_strong: CCM visor straight !
+    new_user:
+      js:
+        new_user:
+          something: Something
+  shared:
+    footer:
+      abonnez_vous: Abonnez vous
+      abonnez_vous_strong: Abonnez vous strong
