--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,20 +1,32 @@
+---
 fr:
+  active_admin:
+    dashboard: Dashboard
+    dashboard_welcome:
+      call_to_action: Call to action
+      welcome: Welcome
   pages:
     home:
-      bientot_en_ligne: "Bientôt en ligne"
-      header_content: "On peut vous faciliter la vie !"
-      lead: "Boutique en ligne pour équipement d'arbitre de hockey."
-      span: "Inscrivez-vous et courez la chance de gagner une "
-      span_strong: "nouvelle visière CCM straight !"
-      meilleur_prix: "Bas prix. "
-      blow_your_mind: "Quelques chose: Blow your mind."
-      meilleur_prix_lead: "Vous ne trouverez pas de meilleur prix ailleurs."
-      meme_toit: "Tout sous un même toit. "
-      meme_toit_regarde: "Vois par toi même."
-      meme_toit_lead: "Peu importe ce que vous recherchez, on l'a."
-      achat_en_kit: "Achat en kit. "
-      achat_en_kit_checkmate: "Échec et mat."
-      achat_en_kit_lead: "Bénéficier d'un rabais en achetant l'un de nos deux kits : "
-      achat_en_kit_lead_ou: "ou"
-      # email_placeholder: "exemple@gmail.com"
-      # email_submit_btn: "Averti moi !"
+      achat_en_kit: 'Achat en kit. '
+      achat_en_kit_checkmate: Échec et mat.
+      achat_en_kit_lead: 'Bénéficier d''un rabais en achetant l''un de nos deux kits : '
+      achat_en_kit_lead_ou: ou
+      bientot_en_ligne: Bientôt en ligne
+      blow_your_mind: 'Quelques chose: Blow your mind.'
+      header_content: On peut vous faciliter la vie !
+      lead: Boutique en ligne pour équipement d'arbitre de hockey.
+      meilleur_prix: 'Bas prix. '
+      meilleur_prix_lead: Vous ne trouverez pas de meilleur prix ailleurs.
+      meme_toit: 'Tout sous un même toit. '
+      meme_toit_lead: Peu importe ce que vous recherchez, on l'a.
+      meme_toit_regarde: Vois par toi même.
+      span: 'Inscrivez-vous et courez la chance de gagner une '
+      span_strong: nouvelle visière CCM straight !
+    new_user:
+      js:
+        new_user:
+          something: Something
+  shared:
+    footer:
+      abonnez_vous: Abonnez vous
+      abonnez_vous_strong: Abonnez vous strong
